Update Bootstrap and jQuery to latest versions
This commit includes several updates and additions:
- Updated Bootstrap to version 5.3.3, including new utility functions, event handling mechanisms, and component classes. Key components such as `Alert`, `Button`, `Carousel`, and others have been implemented or updated.
- Added new CSS files for RTL support and source maps for debugging.
- Introduced new JavaScript files for jQuery Validation Plugin and unobtrusive validation support, including both full and minified versions.
- Updated jQuery to version 3.7.1, including a minified version of jQuery Slim, which excludes certain features for reduced file size and improved performance.
- Added source maps for jQuery Slim to enhance debugging capabilities.

by Karen

--- a/Bootstrap5OffCanvasExample/Pages/Index1.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Index1.cshtml
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-    <div class="row">
+@*     <div class="row">
 
         <div class="col">
             <div class="card shadow rounded-1">
@@ -20,14 +20,21 @@
             </div>
         </div>
         
-    </div>
+    </div> *@
 
     <div class="container">
         
-        <button class="btn btn-primary"     type="button" data-bs-toggle = "offcanvas" data-bs-target = "#offcanvasLeft">Open left</button>
+        @*         <button class="btn btn-primary"     type="button" data-bs-toggle = "offcanvas" data-bs-target = "#offcanvasLeft">Open left</button>
         <button class="btn btn-primary m-3" type="button" data-bs-toggle = "offcanvas" data-bs-target = "#offcanvasRight">Open Right</button>
         <button class="btn btn-primary m-3" type="button" data-bs-toggle = "offcanvas" data-bs-target = "#offcanvasBottom">Open Bottom</button>
+ *@        
         
+        <div class="d-flex justify-content-center mt-3">
+            <button class="btn btn-primary m-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft">Open Left</button>
+            <button class="btn btn-primary m-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight">Open Right</button>
+            <button class="btn btn-primary m-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom">Open Bottom</button>
+        </div>
+
         @*
             Lots of text for demoing off-canvas body scrolling for left side opening
         *@
