--- a/Bootstrap5OffCanvasExample/Pages/Index.cshtml
+++ b/Bootstrap5OffCanvasExample/Pages/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="card shadow rounded-1">
                 <div class="card-body  bg-light">
                     <H1 class="fs-6">Bootstrap off canvas and progress bar (toggle and button are not synchronized)</H1>
-                    <p>Skip link opens left side off-canvas</p>
+                    <p><strong>Skip link</strong> opens left side off-canvas</p>
                 </div>
             </div>
 
