--- a/Bootstrap5ToastExample1/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ToastExample1/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MorePage">Other</a>
+                        </li>
                     </ul>
                 </div>
             </div>
