Add Danger page and update Index page title
Updated the title of `Index.cshtml` to "Modal in page" and added a new heading and paragraph for context. Removed an unused `using` directive in `Privacy.cshtml.cs`. Added a new "Danger" page with a button and SVG icon, and included a `_ToastDanger` partial view. Added a new navigation link to the "Danger" page in `_Layout.cshtml`. Introduced a new project "Toast" in the solution. Added `Explaination.ico` for use in the toast header.

by Karen

--- a/Bootstrap5ToastExample1/Pages/Index.cshtml
+++ b/Bootstrap5ToastExample1/Pages/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@page
 @model Bootstrap5ToastExample1.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Modal in page";
 }
-
-<button id="showToastBtn" type="button" class="btn btn-primary">Show toast</button>
-
+<h1 class="text-center mb-4">@ViewData["Title"]</h1>
+<div class="text-center">
+    <button id="showToastBtn" type="button" class="btn btn-primary mb-4">Show toast</button>
+    <p>
+        This page has the modal in the page while other pages use a modal from a partial page.
+    </p>
+</div>
 <partial name="_Toast" model="Model.Toast" />
