--- a/Bootstrap5ToastExample1/Pages/Shared/_Layout.cshtml
+++ b/Bootstrap5ToastExample1/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/MorePage">Other</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Danger">Danger</a>
+                        </li>
                     </ul>
                 </div>
             </div>
