Update Index page to use Bootstrap Toasts
by Karen

--- a/Bootstrap5ToastExample1/Pages/Index.cshtml
+++ b/Bootstrap5ToastExample1/Pages/Index.cshtml
@@ -1,13 +1,18 @@
 ﻿@page
 @model Bootstrap5ToastExample1.Pages.IndexModel
 @{
-    ViewData["Title"] = "Modal in page";
+    ViewData["Title"] = "Toast in page";
 }
 <h1 class="text-center mb-4">@ViewData["Title"]</h1>
 <div class="text-center">
     <button id="showToastBtn" type="button" class="btn btn-primary mb-4">Show toast</button>
+
     <p>
-        This page has the modal in the page while other pages use a modal from a partial page.
+        This page has the 
+        <a href="https://getbootstrap.com/docs/5.3/components/toasts/" target="_blank">toast</a> 
+        in the page while other pages use a modal from a partial page.
     </p>
+
 </div>
+
 <partial name="_Toast" model="Model.Toast" />
